[gd_scene load_steps=42 format=2]

[ext_resource path="res://ui/hud/v2/PadHandle.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/v2/PadDrawer.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/v3/drawer_handle_default.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/v3/drawer_interior_shade.png" type="Texture" id=4]
[ext_resource path="res://ui/hud/v3/DrawerCorner.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/hud/v3/drawer_background_wide_thick.png" type="Texture" id=6]
[ext_resource path="res://ui/hud/v3/drawer_front_tile_thick.png" type="Texture" id=7]
[ext_resource path="res://ui/hud/v3/drawer_handle_hover.png" type="Texture" id=8]
[ext_resource path="res://ui/hud/v3/StartShade.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/hud/v3/DrawerInsert.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/hud/v3/InsertTile.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/hud/v3/DrawerSounds.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/Pad.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 2, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 4, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 6, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 8, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 10, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 12, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 14, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 18, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 20, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 22, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 28, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 30, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 34, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 38, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 40, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 42, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 44, 0, 2, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 46, 0, 2, 32 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="PhysicsMaterial" id=27]
friction = 0.5
bounce = 0.3

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 49, 5 )

[node name="PadDrawer" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="DrawerLimit" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawerLimit"]
visible = false
position = Vector2( 243, 261 )
shape = SubResource( 1 )

[node name="InteriorTile" type="Sprite" parent="."]
position = Vector2( 57, 259 )
scale = Vector2( 1, 276 )
texture = ExtResource( 6 )
centered = false

[node name="InteriorShade" type="Sprite" parent="."]
position = Vector2( 239.5, 256 )
scale = Vector2( 178.5, 1 )
texture = ExtResource( 4 )

[node name="Insert1" parent="." instance=ExtResource( 10 )]
position = Vector2( 424, 298 )
rotation = 0.0
scale = Vector2( -1, 1 )
animation = "thick"

[node name="Insert2" parent="." instance=ExtResource( 10 )]
position = Vector2( 56, 298 )
rotation = 0.0
animation = "thick"

[node name="StartShade" parent="." instance=ExtResource( 9 )]
position = Vector2( 423, 264 )
offset = Vector2( -363, 0 )

[node name="StartShade2" parent="." instance=ExtResource( 9 )]
position = Vector2( 784, 264 )
offset = Vector2( -363, 0 )

[node name="Corner1" parent="." instance=ExtResource( 5 )]
position = Vector2( 424, 247 )
rotation = 0.0
scale = Vector2( -1, 1 )
animation = "thick"

[node name="Corner2" parent="." instance=ExtResource( 5 )]
position = Vector2( 56, 247 )
rotation = 0.0
animation = "thick"

[node name="EndTile" type="AnimatedSprite" parent="."]
position = Vector2( 68, 247 )
scale = Vector2( 172, 1 )
frames = SubResource( 26 )
centered = false

[node name="InsertTile" parent="." instance=ExtResource( 11 )]
position = Vector2( 68, 298 )
rotation = 0.0
scale = Vector2( 172, 1 )

[node name="Pad" parent="." instance=ExtResource( 13 )]
position = Vector2( 240, 371 )

[node name="PadHandle" type="RigidBody2D" parent="."]
position = Vector2( 0, 241 )
input_pickable = true
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 27 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HandleSprite" type="TextureButton" parent="PadHandle"]
margin_left = 190.0
margin_right = 291.0
margin_bottom = 18.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PadHandle"]
visible = false
position = Vector2( 240, 6 )
shape = SubResource( 28 )

[node name="DrawerSounds" parent="PadHandle" instance=ExtResource( 12 )]
position = Vector2( 240, 0 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 0, 241 )
__meta__ = {
"_edit_lock_": true
}

[node name="End" type="Position2D" parent="."]
position = Vector2( 0, 8 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="PadHandle" to="PadHandle" method="_on_PadHandle_body_entered"]
[connection signal="button_down" from="PadHandle/HandleSprite" to="PadHandle" method="_on_HandleSprite_button_down"]
[connection signal="button_up" from="PadHandle/HandleSprite" to="PadHandle" method="_on_HandleSprite_button_up"]
[connection signal="mouse_entered" from="PadHandle/HandleSprite" to="PadHandle" method="_on_HandleSprite_mouse_entered"]
[connection signal="mouse_exited" from="PadHandle/HandleSprite" to="PadHandle" method="_on_HandleSprite_mouse_exited"]
